[package]
name = "rfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytebuffer = "2.2.0"
clap = { version = "4.4.12", features = ["derive"] }
serde = { version = "1.0.194", features = ["derive"] }
serde-xdr = { git = "https://github.com/hapejot/serde-xdr.git", version = "0.6.0" }
serde_bytes = "0.11.14"
tokio = { version = "1.35.1", features = ["full"] }

[profile.release]
debug = 1